fix homepage item button text overflow issue

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -65,6 +65,9 @@ page-home {
           max-width: 4rem;
           max-height: 3rem;
         }
+          p{
+              max-width: 100%;
+          }
       }
     }
   }
